--- a/tree-exercise.html
+++ b/tree-exercise.html
@@ -12,7 +12,7 @@
 <div class="site-wrapper">
 	<div class="nav-wrapper beFixed">
 	<div class="logo-wrapper">
-		<img src="/images/logo.png" id="logo">
+		<img src="images/logo.png" id="logo">
 		<h4>UI Design</h4>
 		<h5>August 2015</h5>
 	</div>
