fixing tree exercise page

--- a/tree-exercise.html
+++ b/tree-exercise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TIY ATX UI Design PreWork - Tree Exercises</title>
+	<title>TIY ATX UI Design PreWork - Tree Exercise</title>
 	<link href="css/reset.css" type="text/css" rel="stylesheet" />
 	<link href="css/responsive-nav.css" type="text/css" rel="stylesheet" />
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
