fixing tree exercises page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		The goal of this prework is to give you a basic understanding of HTML and CSS before class so we can delve into more complex ideas.
 		</p>
 		<ul>
-			<li>Complete the <a href="/tree-exercise.html">Tree Structure Exercise</a> and email them to me (abby@theironyard.com)</li>
+			<li>Complete the <a href="/tree-exercises.html">Tree Structure Exercise</a> and email them to me (abby@theironyard.com)</li>
 			<li>Complete the <a href="https://www.codecademy.com/en/tracks/web" target="_blank">Codecademy - Web Track</a>.  This should take you approximately 7-12 hours, depending on your prior experience.</li>
 		</ul>
 		<h1 id="markdown">Markdown</h1>
