tree exercises page

--- a/tree-exercises.html
+++ b/tree-exercises.html
@@ -37,49 +37,49 @@
 		<div class="tree-wrapper">
 		<h1>Tree Structures</h1>
 		<p>Grab your hoverboard, your self-lacing Nike's, and power on the Delorean because we're taking a trip back to the future (or actually just back to the past). Do you remember in elementary school when you had to make a family tree?  It probably looked something like this:</p>
-			<img src="/images/family_tree.png" alt="Family Tree" >
+			<img src="images/family_tree.png" alt="Family Tree" >
 		
 		<p>Tree structures are a simple way of organizing data for any website or application.  They get their name from the fact that they look like a family tree or an upsidedown tree. It will be important to understand the different parts of a tree structure so that you can structure your code similarly.  So, looking at my family tree, lets break it apart.
 		</p>
 		<h3>Node</h3>
-		<p>A node is a single point of data in the tree structure. In terms of my family, this would correspond to an individual person or pair of people.</p> <img src="/images/node.png" alt="Node" >
+		<p>A node is a single point of data in the tree structure. In terms of my family, this would correspond to an individual person or pair of people.</p> <img src="images/node.png" alt="Node" >
 		<h3>Root</h3>
 		<p> The root (or root directory) is the top most node of the tree (Frances/Joseph). When it comes to application structure, the root will be the node that stores all of the folders/files.
 		</p>
-		<img src="/images/root.png" alt="Root" >
+		<img src="images/root.png" alt="Root" >
 		<h3>Parent</h3>
 		<p> The parent is any node that is directly above the node in question. In the case of my family tree, if Abigail is the node in question, the Andrew/Veronica node is the parent. Andrew/Veronica is also the parent of Aaron and Elizabeth.  James/Roxane, Paul/Rosita, and Frances/Joseph are also parents.
 		</p>
-		<img src="/images/parent.png" alt="Parent" >
+		<img src="images/parent.png" alt="Parent" >
 		<h3>Child</h3>
 		<p> A child node is the node(s) directly below the node in question. Just like in a family tree, a parent can have multiple children, but a child can only have one parent. The node in question in this example is Paul/Rosita.  Phoebe, Lucy, and Daniel are all children of the Paul/Rosita node.
 		</p>
-		<img src="/images/child.png" alt="Child" >
+		<img src="images/child.png" alt="Child" >
 		
 		<h3>Sibling</h3>
 		<p> Sibling nodes are nodes with the same parent. Phoebe, Lucy, and Daniel are all siblings because their parent node is Paul/Rosita.  Aaron, Elizabeth, and Abigail are also siblings with each other, while Peter has no siblings.
 		</p>
-		<img src="/images/sibling.png" alt="Sibling" >
+		<img src="images/sibling.png" alt="Sibling" >
 		<h3>Descendant (or ancestor)</h3>
 		<p> A descendant node is one that can be traced back from the node in question.  For example, everyone on the tree is a descendent of the Frances/Joseph node.  Peter is the only descendant of James and Roxane.
 		</p>
-		<img src="/images/descendant.png" alt="Descendant" >
+		<img src="images/descendant.png" alt="Descendant" >
 		<h3>Leaf</h3>
 		<p> Much like an actual tree, a data tree has a few structural elements as well.  The first is a leaf.  A leaf is a node with no children.  In this case, Aaron, Elizabeth, Abigail, Peter, Phoebe, Lucy, and Daniel are all leaves.
 		</p>
-		<img src="/images/leaf.png" alt="Leaf" >
+		<img src="images/leaf.png" alt="Leaf" >
 		<h3>Edge</h3>
 		<p> An edge is similar to the branch of a tree in that it connects different nodes. The highlighted arrow is an edge between Frances/Joseph and Paul/Rosita.
 		</p>
-		<img src="/images/edge.png" alt="Edge" >
+		<img src="images/edge.png" alt="Edge" >
 		<h3>Path</h3>
 		<p> Finally, a path is a group of edges and nodes that connects a node with its descendant.  This is going to be very important because paths are ways to connect different folders and files to our website in our code. In this example, there is a path from Frances/Joseph to Daniel.
 		</p>
-		<img src="/images/path.png" alt="Path" >
+		<img src="images/path.png" alt="Path" >
 		<h1>Tree Exercises</h1>
 		<p> When it comes to our code, HTML is a tree. The nodes of our tree become a system of files and folders. The following exercises will help to solidify you knowledge of tree structures, but unlike the above examples, will be based off of the basic file structure for a website (not a family tree).
 		</p>
-		<img src="/images/website_tree.png" alt="Website Tree" >
+		<img src="images/website_tree.png" alt="Website Tree" >
 		<h3>Questions</h3>
 		<ol>
 			<li>What is the root directory?</li>
