--- a/tree-exercises.html
+++ b/tree-exercises.html
@@ -18,17 +18,17 @@
 	</div>
 		<nav class="nav-collapse">
 		  <ul>
-		    <li><a href="/index.html#welcome">Home</a></li>
-		    <li><a href="/index.html#prework">Prework</a></li>
-		    <li><a href="/index.html#objectives">Objectives</a></li>
-		    <li><a href="/index.html#mindset">Mindset and Learning</a></li>
-		    <li><a href="/index.html#setup">Computer Setup</a></li>
-		    <li><a href="/index.html#adobe">Adobe Suite</a></li>
-		    <li><a href="/index.html#design">Basic Design Principles</a></li>
-		    <li><a href="/index.html#coding">HTML and CSS Basics</a></li>
-		    <li><a href="/index.html#markdown">Markdown</a></li>
-		    <li><a href="#/index.htmltyping">Typing</a></li>
-		    <li><a href="/index.html#bonus">Bonus</a></li>
+		    <li><a href="index.html#welcome">Home</a></li>
+		    <li><a href="index.html#prework">Prework</a></li>
+		    <li><a href="index.html#objectives">Objectives</a></li>
+		    <li><a href="index.html#mindset">Mindset and Learning</a></li>
+		    <li><a href="index.html#setup">Computer Setup</a></li>
+		    <li><a href="index.html#adobe">Adobe Suite</a></li>
+		    <li><a href="index.html#design">Basic Design Principles</a></li>
+		    <li><a href="index.html#coding">HTML and CSS Basics</a></li>
+		    <li><a href="index.html#markdown">Markdown</a></li>
+		    <li><a href="index.html#typing">Typing</a></li>
+		    <li><a href="index.html#bonus">Bonus</a></li>
 		  </ul>
 		</nav>
 	</div>
